  - Added api for project jobs
  - Implementation of deploy jobs after all parallel jobs(tests).
  - Add scroll up/down buttons for better mobile experience with large build traces
  - Add runner last contact (Kamil Trzciński)
  - Allow to pause runners - when paused runner will not receive any new build (Kamil Trzciński)

v7.8.2
  - Fix the broken build failed email

v7.8.0
  - Fix OAuth login with GitLab installed in relative URL
  - GitLab CI has same version as GitLab since now
  - Allow to pass description and tag list during Runner's registration (Kamil Trzciński)
  - Update documentation (API, Install, Update)
  - Skip refs field supports for wildcard branch name (ex. feature/*)
  - Migrate E-mail notification to Services menu (Kamil Trzciński)
  - Added Slack notifications (Kamil Trzciński)
  - Disable turbolink on links pointing out to GitLab server
  - Add test coverage parsing example for pytest-cov
  - Upgrade raindrops gem

v5.4.2
  - Fix exposure of project token via build data

v5.4.1
  - Fix 500 if on builds page if build has no job
  - Truncate project token from build trace
  - Allow users with access to project see build trace

v5.4.0 (Requires GitLab 7.7)
  - Fixed 500 error for badge if build is pending
  - Non-admin users can now register specific runners for their projects
  - Project specific runners page which users can access
  - Remove progress output from schedule_builds cron job
  - Fix schedule_builds rake task
  - Fix test webhook button
  - Job can be branch specific or tag specific or both
  - Shared runners builds projects which are not assigned to specific ones
  - Job can be runner specific through tags
  - Runner have tags
  - Move job settings to separate page
  - Add authorization level managing projects
  - OAuth authentication via GitLab.

v5.3
  - Remove annoying 'Done' message from schedule_builds cron job
  - Fix a style issue with the navbar
  - Skip CSRF check on the project's build page